# Wi-Fi-Mesh-Sensor-Monitoring-System

./: .gitignore  NoteServer.txt  README.md
App_React/: README.md  TASK_ASSIGNMENT.md  app.json  package-lock.json  package.json  tsconfig.json
App_React/PythonServer/: server.py
App_React/Report/: bia.tex  build-pdflatex.bat  download_puml.py  report.aux  report.fdb_latexmk  report.fls  report.lof  report.lot  (+3 more)
DashboardManagerWifiMesh/: README.md  craco.config.js  package.json
MSMS_Project/: .gitignore  CMakeLists.txt  README.md  component_diagram.puml  partitions.csv  sdkconfig  sdkconfig.old
MSMS_Project - C3/: INTEGRATE_ESP_MDF.md  component_diagram_detailed.puml
MSMS_Project/component/ui/MenuSystem/: CMakeLists.txt  MENUSYSTEM_EXPLAIN.md  MenuSystem.c  MenuSystem.h
MSMS_Project/main/: CMakeLists.txt  main.c  main.h
MeshGateWay/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
MeshGateWay/components/core/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_comp_hook.c  ui_events.h  ui_font_Arteon10.c  ui_font_Arteon12.c  ui_font_Arteon14.c  ui_font_Arteon16.c  ui_font_Arteon20S.c  ui_font_Arteon24.c  ui_font_Arteon30.c  ui_font_Arteon40.c  ui_helpers.c  ui_helpers.h  ui_img_136761274.c  ui_img_1612021159.c  ui_img_48530715.c  ui_img_733045785.c  ui_img_746023423.c  ui_img_arrowdown_png.c  ui_img_arrowup_png.c  ui_img_latency_png.c  ui_img_matrix0_png.c  ui_img_packetloss_png.c  ui_img_throught_png.c
Node_MSMS/: sdkconfig  sdkconfig.old
PythonStressTest/: client_simulator.py  requirements.txt  server_plot.py
(+2553 files in other folders)
